Map Guide button for Xbox One gamepads on Mac

The Standard Gamepad specifies that the Guide button, if present, should
be mapped to B16. Xbox One gamepads expose the Guide button in a different
message than the rest of the buttons and axes. This CL listens for the
guide message and updates the B16 button state accordingly. The sync
button, which was previously mapped to B16, is unmapped with this CL for
consistency with other platforms.

BUG=773123

Change-Id: If56a0f63da643d861d4aefc69b3c7e24e4770ba4
Reviewed-on: https://chromium-review.googlesource.com/727376
Commit-Queue: Matt Reynolds <mattreynolds@chromium.org>
Reviewed-by: Brandon Jones <bajones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510516}
Former-commit-id: 70747f0483faf431871d8d1f243a7181bcf9b2ba